--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/Kozmo1/Brewery-Order-Service#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv-safe": "^9.1.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
@@ -32,6 +33,7 @@
     "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
