--- a/package.json
+++ b/package.json
@@ -25,21 +25,25 @@
   },
   "homepage": "https://github.com/Kozmo1/Brewery-Order-Service#readme",
   "dependencies": {
+    "axios": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv-safe": "^9.1.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
-    "mongoose": "^8.10.1",
+    "jsonwebtoken": "^9.0.2",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/cors": "^2.8.17",
     "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.4",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.9",
+    "prettier": "3.5.2",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2"
   }
